<resources>
    <string name="app_name">Academic Procrastination Reducer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tugaskuliah_hint_subject">Mata Kuliah</string>
    <string name="tugaskuliah_hint_nama_tugas">Nama Tugas Kuliah</string>
    <string name="tugaskuliah_hint_deadline">Tanggal Tenggat Waktu</string>
    <string name="tugaskuliah_hint_deadline_commitment">Tanggal Target Selesai</string>
    <string name="tugaskuliah_hint_jam">Jam Tenggat Waktu</string>
    <string name="tugaskuliah_hint_jam_commitment">Jam Target Selesai</string>
    <string name="tugaskuliah_hint_editJam">Jam Tenggat Waktu (9:00)</string>
    <string name="tugaskuliah_hint_catatan">Catatan</string>
    <string name="tugaskuliah_hint_ToDoList">Daftar Sub Tugas</string>
    <string name="deadline_button">deadline button</string>
    <string name="tugas">tugas</string>
    <string name="tambah">tambah</string>
    <string name="gambar">Gambar</string>
    <string name="time_icon">Jam</string>
    <string name="list_agenda_header_text">Tanggal Deadline Tugas Kuliah</string>
    <string name="batal">batal</string>
    <string name="list_subject_header_text">Pilih Mata Kuliah</string>
    <string name="tambah_subject">Tambah Mata Kuliah</string>
    <string name="nama_subject">Nama Mata Kuliah</string>
    <string name="to_do_list">To Do List</string>
    <string name="selesai">Selesai</string>
    <string name="action_notify_tugas_kuliah">com.example.academictaskorganizer_skripsi.action.NOTIFY_TUGAS_KULIAH</string>
    <string name="notification_group">tugasKuliah</string>
    <string name="notification_channel_name">Pengingat untuk Tugas Kuliah</string>
    <string name="group_notification_for">Ini merupakan grup notifikasi tugas kuliah.</string>
    <string name="get_tugas_kuliah_id_key">tugasKuliahIdKey</string>
    <string name="pilih_subject">Pilih Mata Kuliah</string>
    <string name="allow_access_storage">Untuk mengizinkan aplikasi agar dapat menampilkan gambar pada editor Tugas Kuliah. Tekan OK untuk melanjutkan.</string>
    <string name="allow_access_storage_title">Izin membaca penyimpanan dibutuhkan</string>
    <string name="back_confirmation_title">Apakah Anda yakin untuk meninggalkan halaman ini?</string>
    <string name="back_confirmation_subtitle">Data yang telah Anda masukkan akan hilang.</string>
    <string name="delete_todolist_confirmation_title">Apakah Anda yakin untuk menghapus Sub Tugas ini?</string>
    <string name="delete_todolist_confirmation_subtitle">Anda tidak dapat mengembalikan aksi ini.</string>
    <string name="delete_image_confirmation_title">Apakah Anda yakin untuk menghapus Gambar ini?</string>
    <string name="delete_image_confirmation_subtitle">Anda tidak dapat mengembalikan aksi ini.</string>
    <string name="delete_tugas_confirmation_title">Apakah Anda yakin untuk menghapus Tugas Kuliah ini?</string>
    <string name="delete_tugas_confirmation_subtitle">Anda tidak dapat mengembalikan aksi ini.</string>
    <string name="subject_error">Harap pilih Mata Kuliah.</string>
    <string name="add_subject_error">Harap masukkan Nama Mata Kuliah.</string>
    <string name="tugas_error">Harap masukkan Nama Tugas Kuliah.</string>
    <string name="finish_commitment_error">Harap masukkan Tanggal Target Selesai.</string>
    <string name="deadline_error">Harap masukkan Tanggal Tenggat Waktu.</string>
    <string name="updated_tugas_kuliah_message">Tugas Kuliah diperbarui.</string>
    <string name="inserted_tugas_kuliah_message">Tugas Kuliah disimpan.</string>
    <string name="simpan">Simpan</string>
    <string name="delete_subject_title_confirmation">Apakah Anda yakin untuk menghapus Mata Kuliah ini?</string>
    <string name="delete_subject_subtitle_confirmation">Semua Tugas Kuliah yang terkait akan terhapus. Anda tidak dapat mengembalikan aksi ini.</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="hapus">Hapus</string>
    <string name="task_completion_history">Riwayat Penyelesaian Tugas</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="selanjutnya">selanjutnya</string>
    <string name="mulai">mulai</string>
    <string name="kembali">kembali</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="ubah">Ubah</string>
    <string name="ubah_mata_kuliah">Ubah Mata Kuliah</string>
    <string name="filter">Filter</string>
</resources>