<?xml version="1.0" encoding="utf-8"?>




<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".view.EditTugasFragment">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/button_save"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_layout_margin"
            android:layout_marginEnd="@dimen/app_layout_margin"
            android:layout_width="56dp"
            android:src="@drawable/ic_done"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_safearea"
            android:layout_marginEnd="@dimen/margin_safearea"
            android:layout_marginStart="@dimen/margin_safearea"
            android:layout_marginTop="@dimen/margin_safearea"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/input_text_view"
                    android:hint="@string/tugaskuliah_hint_subject"
                    android:id="@+id/inputTextSubject">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/roboto"
                        android:id="@+id/editTextSubject"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/input_text_view"
                    android:hint="@string/tugaskuliah_hint_nama_tugas"
                    android:id="@+id/inputTextTugas"
                    app:helperText="@string/tugaskuliah_hint_nama_tugas">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/roboto"
                        android:id="@+id/editTextTugas"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:visibility="gone" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/input_text_view"
                        android:hint="@string/tugaskuliah_hint_deadline"
                        android:id="@+id/inputDeadline"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <com.google.android.material.textfield.TextInputEditText
                            android:fontFamily="@font/roboto"
                            android:id="@+id/editDeadline"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent" />

                        <ImageView
                            android:contentDescription="@string/deadline_button"
                            android:id="@+id/imageForDeadlineIcon"
                            android:layout_height="24dp"
                            android:layout_width="24dp"
                            android:src="@drawable/ic_baseline_today_24" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/input_text_view"
                    android:hint="@string/tugaskuliah_hint_jam"
                    android:id="@+id/inputJam">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/roboto"
                        android:id="@+id/editJam"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/app_layout_margin"
                    android:layout_width="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:background="#00FFFFFF"
                        android:id="@+id/ToDoListTextView"

                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/tugaskuliah_hint_ToDoList"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_body_size"
                        app:fontFamily="@font/roboto"
                        app:layout_constraintBaseline_toBaselineOf="@+id/addToDoListButton"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0" />

                    <ImageButton
                        android:adjustViewBounds="true"
                        android:background="#FFFFFF"
                        android:clickable="true"
                        android:contentDescription="@string/tugas"
                        android:cropToPadding="false"
                        android:focusable="true"
                        android:foregroundTint="#54000000"
                        android:id="@+id/addToDoListButton"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_height="24dp"
                        android:layout_width="24dp"
                        android:src="@drawable/ic_add"
                        android:tint="#8A000000"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ToDoListRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/app_layout_margin"
                    android:visibility="visible" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/input_text_view"
                    android:hint="@string/tugaskuliah_hint_catatan"
                    android:id="@+id/inputCatatan">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/roboto"
                        android:id="@+id/editCatatan"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/app_layout_margin"
                    android:layout_width="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:background="#00FFFFFF"
                        android:id="@+id/GambarTextView"

                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/gambar"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_body_size"
                        app:fontFamily="@font/roboto"
                        app:layout_constraintBaseline_toBaselineOf="@+id/addGambarButton" />

                    <ImageButton
                        android:adjustViewBounds="true"
                        android:background="#FFFFFF"
                        android:clickable="true"
                        android:contentDescription="@string/tugas"
                        android:cropToPadding="false"
                        android:focusable="true"
                        android:foregroundTint="#54000000"
                        android:id="@+id/addGambarButton"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_height="24dp"
                        android:layout_width="24dp"
                        android:src="@drawable/ic_add"
                        android:tint="#8A000000"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/GambarTextView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!--                untuk memberikan jarak konsisten antar gambar yang diinput, bisa gunakan layout_constraintHorizontal_chainStyle or the layout_constraintVertical_chainStyle-->
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/GambarRecyclerView"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/app_layout_margin"
                    android:layout_width="match_parent"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>