<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="addTugasKuliahFinishCommitmentFragmentViewModel"
            type="com.hubertdaryanto.academicprocrastinationreducer_skripsi.viewModel.AddTugasKuliahFinishCommitmentFragmentViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.MyApp.Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Kapan Anda akan menyelesaikan tugas kuliah ini (Maksimal 75% dari waktu saat ini sebelum tenggat waktu)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.MyApp.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Anda akan diperingatkan dan dicatat bahwa anda menunda menyelesaikan tugas kuliah ini apabila sudah melewati waktu yang sudah ditentukan dibawah."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputDeadline"
            style="@style/input_text_view"
            android:hint="@string/tugaskuliah_hint_deadline_commitment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDeadline"
                style="@style/edit_text_view"
                android:enabled="true"
                android:onClick="@{() -> addTugasKuliahFinishCommitmentFragmentViewModel.onDatePickerClicked()}" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageForDeadlineIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/deadline_button"
            android:src="@drawable/ic_baseline_today_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputJam"
            style="@style/input_text_view"
            android:hint="@string/tugaskuliah_hint_jam_commitment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editJam"
                style="@style/edit_text_view"
                android:enabled="true"
                android:onClick="@{() -> addTugasKuliahFinishCommitmentFragmentViewModel.onTimePickerClicked()}" />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/imageForTimeIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/time_icon"
            android:src="@drawable/ic_baseline_access_time_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>